--- a/layout/header.mjml
+++ b/layout/header.mjml
@@ -1,7 +1,7 @@
 <mj-wrapper>
   <mj-section>
     <mj-column>
-      <mj-text mj-class="text-sm color-black" align="center">
+      <mj-text mj-class="fs-sm color-black" align="center">
         Header
       </mj-text>
     </mj-column>
